# minecraft-texture-viewer

./: .gitignore  CMakeLists.txt  Settings.cap  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  glDrawElements_crashRenderDoc.rdc
shaders/: cube_combine_pass.fsh  cube_combine_pass.vsh  cube_lighting_pass.fsh  cube_lighting_pass.vsh  skybox.fsh  skybox.vsh  test.fsh  test.vsh
src/input/: mouse_events_manager.cpp  mouse_events_manager.h
src/render/: buffers.h  camera.cpp  camera.h  data_loading.cpp  data_loading.h  entity.cpp  entity.h  framebuffer.cpp  framebuffer.h  gl_texture.cpp  gl_texture.h  glad.c  glad.h  hdr_texture.cpp  hdr_texture.h  material.cpp  material.h  renderable.cpp  renderable.h  transform.cpp  transform.h  uniform_buffer.h
src/view/: TexturePreviewerGUI.fbp  app.cpp  app.h  export_options_dialogue.cpp  export_options_dialogue.h  main_window.cpp  main_window.h  noname.cpp  noname.h  preview_panel.cpp  preview_panel.h  texture_preview_canvas.cpp  texture_preview_canvas.h
textures/: blue_hour_at_pier_env.exr  road_in_valley_env.exr
